--- a/WebContent/novo.html
+++ b/WebContent/novo.html
@@ -11,18 +11,22 @@
 	<form name="frmContato" action="insert">
 		<table>
 			<tr>
-				<td><input type="text" name="nome" placeholder="Nome" class="Caixa1"></td>
-			</tr>				
-			<tr>
-				<td><input type="text" name="fone" placeholder="Telefone" class="Caixa2"></td>
+				<td><input type="text" name="nome" placeholder="Nome"
+					class="Caixa1"></td>
 			</tr>
 			<tr>
-				<td><input type="text" name="email" placeholder="E-Mail" class="Caixa1"></td>
+				<td><input type="text" name="fone" placeholder="Telefone"
+					class="Caixa2"></td>
+			</tr>
+			<tr>
+				<td><input type="text" name="email" placeholder="E-Mail"
+					class="Caixa1"></td>
 			</tr>
 		</table>
-		<input type="button" class="Botao1" onclick="validar()" value="Adicionar">
+		<input type="button" class="Botao1" onclick="validar()"
+			value="Adicionar">
 	</form>
 
-<script src="scripts/validador.js"></script>
+	<script src="scripts/validador.js"></script>
 </body>
 </html>
